--- a/frontend/trace/trace.css
+++ b/frontend/trace/trace.css
@@ -14,3 +14,10 @@ body {
     width:100%;
     height:100%;
 }
+.letter, .trace {
+    font-size:120px;
+    stroke:#000;
+}
+.trace {
+    cursor:default;
+}
