--- a/frontend/trace/trace.css
+++ b/frontend/trace/trace.css
@@ -21,3 +21,14 @@ body {
 .trace {
     cursor:default;
 }
+canvas {
+    position:absolute;
+    top:0;
+    left:0;
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -o-crisp-edges;
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;
+}
